--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,8 @@
-
+<footer class="center">
+  <div class="measure">
+    <small>
+      Fernanda Andrade <br />
+      Website powered by <a href="https://jekyllrb.com/">Jekyll</a>.
+    </small>
+  </div>
+</footer>
