--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="measure">
     <small>
       Fernanda Andrade <br />
-      Website powered by <a href="https://jekyllrb.com/">Jekyll</a>.
+      Powered by <a href="https://jekyllrb.com/">Jekyll</a>.
     </small>
   </div>
 </footer>
