--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,15 +1,9 @@
 @charset "UTF-8";
 /*!
 
-Pixyll
+Based on Pixyll.
 
-A simple, beautiful theme for Jekyll that emphasizes content rather than
-aesthetic fluff.
-
-Built upon BASSCSS (http://jxnblk.github.io/basscss).
-
-Crafted with <3 by John Otander (@4lpine) - ©2015 John Otander
-MIT License http://opensource.org/licenses/MIT
+Built upon BASSCSS.
 
 */
 
