--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -1,8 +1,9 @@
 .container {
-  max-width: var(--container-width);
+  max-width: $measure-width;
   margin-left: auto;
   margin-right: auto;
 }
+
 .col {
   float: left;
   box-sizing: border-box;
