--- a/css/pixyll.scss
+++ b/css/pixyll.scss
@@ -26,6 +26,7 @@
 @import 'social-icons';
 @import 'blockquotes';
 @import 'posts';
+@import 'flex';
 @import 'front';
 @import 'media-queries';
 @import 'gists';
