add blog to navigation bar

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,9 @@
 {% for page in site.pages %}
+    {% if page.tags contains "blog" %}
+        <a href="{{ page.url }}">{{ page.title }}</a>
+    {% endif %}
+{% endfor %}
+{% for page in site.pages %}
     {% if page.tags contains "about" %}
         <a href="{{ page.url }}">{{ page.title }}</a>
     {% endif %}
