--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -51,6 +51,8 @@ $darken-1: rgba(#000,.0625) !default;
 $darken-2: rgba(#000,.125) !default;
 $darken-3: rgba(#000,.25) !default;
 $darken-4: rgba(#000,.5) !default;
+$brown: #a18f78 !default;
+$blackie: #7c7c7c !default;
 
 // Links
 $link-color: $blue;
