--- a/_sass/basscss/_colors.scss
+++ b/_sass/basscss/_colors.scss
@@ -95,3 +95,11 @@
 .bg-darken-4 {
   background-color: $darken-4;
 }
+
+.bg-brown {
+  background-color: $brown;
+}
+
+.bg-blackie {
+  background-color: $blackie;
+}
