--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -7,7 +7,7 @@
   font-family: $monospace-font-family;
 }
 
-.projects h2, presentation h3{
+.projects h2, .presentation h3{
   font-family: $font-family;
 }
 
