--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -11,6 +11,10 @@
   font-family: $font-family;
 }
 
+.projects{
+  background: linear-gradient(#8e44ad, #c0392b)
+}
+
 .p-project {
   width: 100%;
 }
