--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -9,10 +9,11 @@
 
 .projects h2, .presentation h3{
   font-family: $font-family;
+  font-weight: 500;
 }
 
-.projects{
-  background: linear-gradient(#8e44ad, #c0392b)
+.projects h2, {
+  font-size: 2.998rem;
 }
 
 .p-project {
@@ -21,6 +22,7 @@
 
 .p-main {
   width: 70%;
+  background: linear-gradient(#8e44ad, #c0392b)
 }
 
 .p-title {
