--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -4,7 +4,7 @@
 }
 
 .presentation h1, h2{
-  font-family: $monospace-font-family;
+  font-family: $heading-font-family:
 }
 
 .projects h2, .presentation h3{
