--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -51,8 +51,6 @@ $darken-1: rgba(#000,.0625) !default;
 $darken-2: rgba(#000,.125) !default;
 $darken-3: rgba(#000,.25) !default;
 $darken-4: rgba(#000,.5) !default;
-$brown: #a18f78 !default;
-$blackie: #f16b4e !default;
 
 // Links
 $link-color: $blue;
@@ -117,7 +115,7 @@ $hljs-chunk: $light-gray;
 // Footer
 $footer-border-top: thin solid #f3f3f3;
 $footer-padding: $space-3;
-$footer-color: #7a7a7a;
-$footer-bg-color: #fafafa;
+$footer-color: #57595b;
+$footer-bg-color: #d9dee0;
 $footer-font-weight: 300;
 $footer-font-size: .75rem;
