--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -1,18 +1,18 @@
-.presentation h1, h2, h3, .github-projects h3{
+.presentation h1, h2, h3 {
   margin-top: 0;
-  margin-bottom: 0.4em;
+  margin-bottom: 0.4rem;
 }
 
 .presentation h1, h2{
   font-family: $heading-font-family;
 }
 
-.projects h2, .presentation h3{
+.projects h2, .presentation h3, .github-projects h3{
   font-family: $font-family;
   font-weight: 500;
 }
 
-.projects h2, {
+.projects h2 {
   font-size: 2.3rem;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .p-project {
-  border-top: 25px solid white;
+  border-top: 0.3rem solid white;
   width: 100%;
 }
 
