--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -115,7 +115,7 @@ $hljs-chunk: $light-gray;
 // Footer
 $footer-border-top: thin solid #f3f3f3;
 $footer-padding: $space-3;
-$footer-color: #57595b;
-$footer-bg-color: #d9dee0;
+$footer-color: #7a7a7a;
+$footer-bg-color: #fafafa;
 $footer-font-weight: 300;
 $footer-font-size: .75rem;
