--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -7,7 +7,7 @@
   font-family: $heading-font-family;
 }
 
-.projects h2, .presentation h3, .github-projects h3, .github-projects-list h4{
+.projects h2, .presentation h3, .github-projects h3{
   font-family: $font-family;
   font-weight: 500;
 }
@@ -24,21 +24,24 @@
   background: linear-gradient(to right, #4b6cb7, #182848);
 }
 
-.github-projects-list{
-  margin: 0;
+.github-projects-list h4{
+  font-size: 700;
 }
 
+.github-projects-list a {
+  text-decoration: none;
+}
 
 .github-projects-list a {
   text-decoration: none;
 }
 
 .github-projects-element, .github-projects-description {
-  margin: 1em 0;
+  margin: 0.5em 0;
 }
 
 .github-projects-element {
-  padding: 0.5em;
+  padding: 0.2em;
 }
 
 .github-projects-element:nth-child(2n) {
