--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -25,11 +25,7 @@
 }
 
 .github-projects-list h4{
-  font-weight: : 700;
-}
-
-.github-projects-list a {
-  text-decoration: none;
+  font-weight: 700;
 }
 
 .github-projects-list a {
