--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -7,7 +7,7 @@
   font-family: $heading-font-family;
 }
 
-.projects h2, .presentation h3, .github-projects h3{
+.projects h2, .presentation h3, .github-projects h3, .github-projects-list h4{
   font-family: $font-family;
   font-weight: 500;
 }
@@ -24,8 +24,8 @@
   background: linear-gradient(to right, #4b6cb7, #182848);
 }
 
-.github-projects-list h4{
-  font-weight: 700;
+.github-projects-list{
+  margin: 0;
 }
 
 .github-projects-list a {
