--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-{% include head.html %}
+{% include headwsn.html %}
 <body class="site{% if site.animated %} animated fade-in-down{% endif %}">
 
 	{% if site.facebook_comments %}
@@ -19,7 +19,14 @@
 
     <div class="post px2 p-responsive wrap" role="main">
       <div class="measure">
-        {{ content }}
+				<div class="post">
+				  <header class="post-header">
+				    <h1 class="h2">{{ page.title }}</h1>
+				  </header>
+				  <article class="post-content">
+				  {{ content }}
+				  </article>
+				</div>
       </div>
     </div>
   </div>
