--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-{% include headwsn.html %}
+{% include head.html %}
 <body class="site{% if site.animated %} animated fade-in-down{% endif %}">
 
 	{% if site.facebook_comments %}
@@ -15,18 +15,11 @@
 	{% endif %}
 
   <div class="site-wrap">
-    {% include header.html %}
+    {% include headerswn.html %}
 
     <div class="post px2 p-responsive wrap" role="main">
       <div class="measure">
-				<div class="post">
-				  <header class="post-header">
-				    <h1 class="h2">{{ page.title }}</h1>
-				  </header>
-				  <article class="post-content">
-				  {{ content }}
-				  </article>
-				</div>
+        {{ content }}
       </div>
     </div>
   </div>
