--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,13 @@
         {% include navigation.html %}
       </nav>
       <div class="clearfix"></div>
-      {% if site.show_social_icons %}
+      {% assign showlinks = false %}
+      {% for tag in page.tags %}
+        {% if tag != 'about' and !='case' %}
+          {% if tag != 'about' and !='case' %}
+            {% assign showlinks  = 'social' %}
+      {% endfor %}
+      {% if site.show_social_icons and showlinks  == true %}
         {% include social_links.html %}
       {% endif %}
     </div>
