--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,16 @@
           {% assign showlinks  = true %}
       {% endif %} {% endfor %}
 
+
       {% if site.show_social_icons and showlinks %}
-        {% include social_links.html %}
+        <div class="social-icons">
+          <div class="social-icons-right">
+            {% include social_links.html %}
+          </div>
+        </div>
+        <div class="clearfix"></div>
       {% endif %}
+
     </div>
   </div>
 </header>
