edit icons style

--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -55,5 +55,14 @@
 
 .social-title{
   border-bottom: 5px solid #3a5199;
-  padding: 5px 10px;
+  padding: 3px 10px;
+}
+
+.post .social-icons{
+  text-align: center;
+  color: #333;
+}
+
+.social-icons a {
+  text-decoration: none;
 }
