edit icons style

--- a/_layouts/pagews.html
+++ b/_layouts/pagews.html
@@ -6,7 +6,7 @@ layout: default
     <h1 class="h2 center"><span class="social-title">{{ page.title }}</span></h1>
     <div class="block mx-auto" >
       {% if site.show_social_icons%}
-        <div class="social-icons">
+        <div class="social-icons mb3">
           {% include social_links.html %}
         </div>
       {% endif %}
