--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -60,9 +60,11 @@
 
 .post .social-icons{
   text-align: center;
+  padding: 0;
   color: #333;
 }
 
 .social-icons a {
   text-decoration: none;
+  color: #333;
 }
