edit icons style

--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -64,7 +64,9 @@
   color: #333;
 }
 
-.social-icons a {
+.post .social-icons a {
   text-decoration: none;
   color: #333;
+  text-shadow: none;
+  background-image: none;
 }
