--- a/css/mockup.css
+++ b/css/mockup.css
@@ -56,7 +56,8 @@
 
 @media all and (min-width: 480px) {
   .css-device--browser {
-    border-top: solid 48px #dfdfdf;
+    border-top: solid 36px rgb(0, 0, 87);
+    border-top: solid 36px rgba(0, 0, 87, 0.7);
   }
 
   .css-device--browser::before {
