--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       </nav>
       <div class="clearfix"></div>
       {% assign showlinks = true %}
-      {% for tag in page.tags %} {% if tag == 'about' or tag == 'case' or tag == 'contact' %}
+      {% for tag in page.tags %} {% if tag == 'about' or tag == 'work' or tag == 'contact' %}
           {% assign showlinks  = false %}
       {% endif %} {% endfor %}
 
