--- a/css/pixyll.scss
+++ b/css/pixyll.scss
@@ -25,6 +25,7 @@
 @import 'social-icons';
 @import 'blockquotes';
 @import 'posts';
+@import 'grid';
 @import 'flex';
 @import 'media-queries';
 @import 'gists';
