--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -53,6 +53,15 @@
   width: 35%;
 }
 
+.services-list {
+  font-size: 0.8rem;
+}
+
+.services-title{
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
 .social-title{
   border-bottom: 5px solid #3a5199;
   padding: 3px 10px;
