edit list style

--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -57,9 +57,14 @@
   font-size: 0.8rem;
 }
 
-.services-title{
-  font-size: 2rem;
+.services-title {
+  font-size: 1.4rem;
   text-transform: uppercase;
+}
+
+.social-title span{
+  border-bottom: 3px solid #3a5199;
+  padding-bottom: 3px;
 }
 
 .social-title{
