edit title style

--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -62,7 +62,7 @@
   text-transform: uppercase;
 }
 
-.social-title span{
+.services-title span{
   border-bottom: 3px solid #3a5199;
   padding-bottom: 3px;
 }
