--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/pixyll.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
     <link rel="stylesheet" href="/css/browser.css" type="text/css">
-    <link rel="stylesheet" href="/css/devices.min.css" type="text/css">
+    <link rel="stylesheet" href="/css/devices.css" type="text/css">
 
     <!-- Fonts -->
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,700,300,300italic' rel='stylesheet' type='text/css'>
