--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -55,10 +55,11 @@
 
 .services-list {
   font-size: 0.7rem;
+  line-height: 1.4rem;
 }
 
 .services-title {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   text-transform: uppercase;
 }
 
