edit media queries

--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -42,11 +42,27 @@
   .social-icons-right {
     text-align: right;
   }
+
+  .work-title-small{
+    display: block;
+  }
+
+  .work-title{
+    display: none;
+  }
 }
 
 @media screen and (min-width: $viewport-medium) {
   html {
     font-size: 18px;
+  }
+
+  .work-title-small{
+    display: none;
+  }
+
+  .work-title{
+    display: block;
   }
 }
 
