--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,6 +4,11 @@
     {% endif %}
 {% endfor %}
 {% for page in site.pages %}
+    {% if page.tags contains "portfolio" %}
+        <a href="{{ page.url }}">{{ page.title }}</a>
+    {% endif %}
+{% endfor %}
+{% for page in site.pages %}
     {% if page.tags contains "blog" %}
         <a href="{{ page.url }}">{{ page.title }}</a>
     {% endif %}
