--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -1,5 +1,5 @@
 .round {
-  -webkit-border-radius: 12px; 
+  -webkit-border-radius: 12px;
   -moz-border-radius: 12px;
   border-radius: 12px;
 }
@@ -40,7 +40,7 @@
 
 .github-projects-element {
   background: #f7f7f7;
-  width: 151px;
+  height: 151px;
 }
 
 .github-projects-description {
