--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -39,7 +39,8 @@
 }
 
 .github-projects-element:hover {
-  background: #cecece;
+  background: rgb(142,68,173);
+  background: rgba(142,68,173,0.5);
 }
 
 .github-projects-element a {
