--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -39,8 +39,7 @@
 }
 
 .github-projects-element:hover {
-  background: rgb(142,68,173);
-  background: rgba(142,68,173,0.8);
+  background: #dedede;
 }
 
 .github-projects-element a {
