--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -61,6 +61,14 @@
 .col-12 {
   width: 100%;
 }
+
+@media screen and (min-width: 0){
+  .in-col {
+    float: left;
+    box-sizing: border-box;
+  }
+}
+
 @media screen and (min-width: $viewport-small){
 
   .sm-col {
