--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -98,7 +98,6 @@
 	min-width: 150px;
 	max-width: 250px;
 	display: block;
-	margin: 1em;
 	padding: 1em 2em;
 	border: none;
 	background: none;
@@ -118,7 +117,7 @@
 
 .button-portfolio {
 	overflow: hidden;
-	width: 245px;
+  border: 2px solid;
 	-webkit-transition: border-color 0.3s, color 0.3s;
 	transition: border-color 0.3s, color 0.3s;
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
