--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -98,7 +98,7 @@
 	min-width: 150px;
 	max-width: 250px;
 	display: block;
-	padding: 1em 2em;
+	padding: 0.7em 1em;
 	border: none;
 	background: none;
 	color: inherit;
@@ -117,12 +117,13 @@
 
 .button-portfolio {
 	overflow: hidden;
-  border: 2px solid;
+  border: 2px solid #fff;
 	-webkit-transition: border-color 0.3s, color 0.3s;
 	transition: border-color 0.3s, color 0.3s;
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
+
 .button-portfolio::before {
 	content: '';
 	position: absolute;
@@ -139,22 +140,17 @@
 	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s;
 	transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
 }
+
 .button-portfolio:hover {
-	color: #fff;
-	border-color: #3f51b5;
-}
-.button-portfolio.button--inverted:hover {
-	color: #3f51b5;
+  color: #3f51b5;
 	border-color: #fff;
 }
+
 .button-portfolio:hover::before {
 	opacity: 1;
-	background-color: #3f51b5;
+	background-color: #3a5199;
 	-webkit-transform: rotate3d(0, 0, 1, 0deg);
 	transform: rotate3d(0, 0, 1, 0deg);
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-}
-.button-portfolio.button--inverted:hover::before {
-	background-color: #fff;
 }
