--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -101,7 +101,7 @@
 	padding: 0.7em 1em;
 	border: none;
 	background: none;
-	color: inherit;
+	color: #fff;
 	vertical-align: middle;
 	position: relative;
 	z-index: 1;
