--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -26,6 +26,12 @@
   background: linear-gradient(#8e44ad, #c0392b);
 }
 
+.projects-item {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 .github-projects {
   background: linear-gradient(to right, #4b6cb7, #182848);
 }
@@ -36,6 +42,7 @@
 
 .github-projects-element {
   background: #f7f7f7;
+  height: 100%;
 }
 
 .github-projects-element:hover {
@@ -153,4 +160,22 @@
 	transform: rotate3d(0, 0, 1, 0deg);
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.projects-overlay {
+  position: absolute;
+  top: 0;
+	display: none;
+	color: #ffffff;
+	background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.6)
+  text-align: center;
+  width: 100%;
+  padding: 10px;
+  height:100%;
+  z-index: 10;
+}
+
+.projects-container:hover > .projects-overlay {
+	display: block;
 }
