--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -168,7 +168,7 @@
 	display: none;
 	color: #ffffff;
 	background-color: #000000;
-  background-color: rgba(0, 0, 0, 0.6)
+  background-color: rgba(0, 0, 0, 0.6);
   text-align: center;
   width: 100%;
   padding: 10px;
