--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -6,7 +6,7 @@ a {
     rgba($link-color,.8) 18%,
     rgba(0,0,0,0) 17%
   );
-  text-shadow: white 1px 0px 0px, white -1px 0px 0px;
+  text-shadow: none;
 }
 
 a:hover,
@@ -21,7 +21,7 @@ a:active {
     rgba($link-hover-color,.8) 17%,
     rgba(0,0,0,0) 17%
   );
-  text-shadow: white 1px 0px 0px, white -1px 0px 0px;
+  text-shadow: none;
 }
 
 // Correct issues with buttons
