--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -122,16 +122,15 @@
 	vertical-align: middle;
 }
 
-.button-portfolio {
+.wayra {
 	overflow: hidden;
-  border: 2px solid #fff;
 	-webkit-transition: border-color 0.3s, color 0.3s;
 	transition: border-color 0.3s, color 0.3s;
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-.button-portfolio::before {
+.wayra::before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -148,18 +147,31 @@
 	transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
 }
 
-.button-portfolio:hover {
-  color: #fff;
-	border-color: #fff;
-}
-
-.button-portfolio:hover::before {
+.wayra:hover::before {
 	opacity: 1;
 	background-color: #3a5199;
 	-webkit-transform: rotate3d(0, 0, 1, 0deg);
 	transform: rotate3d(0, 0, 1, 0deg);
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.wayra-white:hover {
+  color: #fff;
+	border-color: #fff;
+}
+
+.wayra-white {
+  border: 2px solid #fff;
+}
+
+.wayra-black:hover {
+  color: #000;
+	border-color: #000;
+}
+
+.wayra-black {
+  border: 2px solid #000;
 }
 
 .projects-overlay {
