--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -108,7 +108,6 @@
 	padding: 0.7em 1em;
 	border: none;
 	background: none;
-	color: #fff;
 	vertical-align: middle;
 	position: relative;
 	z-index: 1;
@@ -135,7 +134,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 150%;
+	width: 100%;
 	height: 100%;
 	background: #37474f;
 	z-index: -1;
@@ -154,6 +153,14 @@
 	transform: rotate3d(0, 0, 1, 0deg);
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.button-sp-white {
+  color: #fff;
+}
+
+.button-sp-white{
+  color: #000;
 }
 
 .wayra-white:hover {
