--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -127,6 +127,7 @@
 	transition: border-color 0.3s, color 0.3s;
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  border: 2px solid;
 }
 
 .wayra::before {
@@ -144,6 +145,7 @@
 	transform-origin: 0% 100%;
 	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s;
 	transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
+  border: 2px solid;
 }
 
 .wayra:hover::before {
@@ -168,17 +170,9 @@
 	border-color: #fff;
 }
 
-.wayra-white {
-  border: 2px solid #fff;
-}
-
 .wayra-black:hover {
   color: #000;
 	border-color: #000;
-}
-
-.wayra-black {
-  border: 2px solid #000;
 }
 
 .projects-overlay {
