--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -141,11 +141,17 @@
 	transform-origin: 0% 100%;
 	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s;
 	transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
+  border: 2px solid;
 }
 
 .wayra:hover::before {
 	opacity: 1;
 	background-color: #3a5199;
+	-webkit-transform: rotate3d(0, 0, 1, 0deg);
+	transform: rotate3d(0, 0, 1, 0deg);
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  border: 2px solid;
 }
 
 .button-sp-white {
