--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -123,6 +123,10 @@
 
 .wayra {
 	overflow: hidden;
+	-webkit-transition: border-color 0.3s, color 0.3s;
+	transition: border-color 0.3s, color 0.3s;
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
   border: 2px solid;
 }
 
@@ -141,7 +145,6 @@
 	transform-origin: 0% 100%;
 	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s;
 	transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
-  border: 2px solid;
 }
 
 .wayra:hover::before {
@@ -151,7 +154,6 @@
 	transform: rotate3d(0, 0, 1, 0deg);
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-  border: 2px solid;
 }
 
 .button-sp-white {
