--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -34,7 +34,7 @@ button,
 .button:hover,
 .button:focus,
 .button:active {
-  color: white;
+  text-decoration: none;
   text-shadow: none;
   background-image: none;
 }
