--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -106,11 +106,11 @@
 	max-width: 250px;
 	display: block;
 	padding: 0.7em 1em;
-	border: none;
 	background: none;
 	vertical-align: middle;
 	position: relative;
 	z-index: 1;
+  border: 2px solid;
 }
 
 .button-sp:focus {
@@ -127,7 +127,6 @@
 	transition: border-color 0.3s, color 0.3s;
 	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-  border: 2px solid;
 }
 
 .wayra::before {
@@ -148,7 +147,12 @@
 }
 
 .wayra:hover::before {
-
+	opacity: 1;
+	background-color: #3a5199;
+	-webkit-transform: rotate3d(0, 0, 1, 0deg);
+	transform: rotate3d(0, 0, 1, 0deg);
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
 .button-sp-white {
