--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -27,6 +27,7 @@ a:active {
 // Correct issues with buttons
 button,
 .button, .button-sp {
+  border: 0;
   text-decoration: none;
   text-shadow: none;
   background-image: none;
@@ -36,6 +37,7 @@ button,
 .button:hover, .button-sp:hover,
 .button:focus, .button-sp:focus,
 .button:active, .button-sp:active {
+  border: 0;
   text-decoration: none;
   text-shadow: none;
   background-image: none;
