--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -101,7 +101,7 @@
 }
 
 .button-sp {
-	float: left;
+  margin: 0 auto;
 	min-width: 150px;
 	max-width: 250px;
 	display: block;
@@ -169,7 +169,7 @@
 }
 
 .wayra-black:hover {
-  color: #000;
+  color: #fff;
 	border-color: #000;
 }
 
