--- a/_sass/_front.scss
+++ b/_sass/_front.scss
@@ -106,7 +106,7 @@
 	max-width: 190px;
 	display: block;
 	padding: 0.7em 1em;
-	background: none;
+	background: #f7f7f7;
 	vertical-align: middle;
   text-align: center;
 	position: relative;
